[build-system]
requires = ["setuptools >= 50", "wheel", "setuptools_scm[toml] >= 6"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# this is used populated when creating a git archive
# and when there is .git dir and/or there is no git installed
fallback_version = "9999.$Format:%h-%cs$"


[project]
name = "ScoreCode"
version = "0.0.0"
description = "A toolkit and library to use the OSSF Scorecard and its API"
readme = "README.rst"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

authors = [
    { name = "nexB. Inc. and others", email = "info@aboutcode.org" },
]

keywords = [
    "Scorecard",
    "ScoreCode",
    "OpenSSF",
    "OSSF",
    "Vulnerablity Analysis"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "commoncode",
    "attrs >= 23.2.0",
    "urllib3 >= 2.2.2",
    "click >= 6.7, !=7.0",
    "packageurl_python >= 0.13.4",
    "requests >= 2.7.0",
]

urls = { Homepage = "https://github.com/nexB/ScoreCode" }


[project.optional-dependencies]
docs = [
    "doc8 >= 0.8.1",
    "Sphinx == 5.1.0",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-reredirects >= 0.1.2",
    "sphinx-rtd-dark-mode>=1.3.0",
    "sphinx_rtd_theme",
]

testing = [
    "black >= 22.6.0",
    "isort",
    "pycodestyle >= 2.8.0",
    "pytest >= 6, != 7.0.0",
    "pytest-rerunfailures",
    "pytest-xdist >= 2",
    "twine",
    "vendorize >= 0.2.0",
]


[tool.isort]
force_single_line = "True"
line_length = 100
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = "doc,venv,tmp,thirdparty,build,dist"


[tool.pytest.ini_options]
norecursedirs = [
   ".git",
   "bin",
   "dist",
   "build",
   "_build",
   "dist",
   "etc",
   "local",
   "ci",
   "docs",
   "man",
   "share",
   "samples",
   ".cache",
   ".settings",
   "Include",
   "include",
   "Lib",
   "lib",
   "lib64",
   "Lib64",
   "Scripts",
   "thirdparty",
   "tmp",
   "venv",
   "tests/data",
   ".eggs",
   "src/*/data",
   "tests/*/data"
]

python_files = "*.py"

python_classes = "Test"
python_functions = "test"

addopts = [
    "-rfExXw",
    "--strict-markers",
    "--doctest-modules"
]